feat: implements change  mode feature

--- a/src/_includes/pages/frontend.njk
+++ b/src/_includes/pages/frontend.njk
@@ -20,19 +20,18 @@ plugins:
             <h2 class="text-2xl font-bold sm:text-3xl">
                 احتراف تطوير الواجهات الأمامية: تصميم واجهات إبداعية وعصرية     
             </h2>
-            <p class="mt-4 text-base-600 text-lg mb-4 md:mb-0">
+            <p class="mt-4 text-lg mb-4 md:mb-0">
                 كمطوّر  Front-End ستبدأ رحلتك بأساسيات تطوير الويب، ثم تتعمّق في الأدوات والتقنيات الحديثة المطلوبة ، وكل ذلك من خلال التطبيق العملي والمشاريع الحقيقية.
             </p>
             <div class="mx-auto max-w-none flex justify-around items-center flex-col md:flex-row gap-2 md:gap-0" x-data >
-            <a class="btn text-white bg-green-primary w-full px-0  md:my-6 " href="#pricing" >
-                بغيت نتعلم  
+                <a class="btn text-white bg-green-primary w-full px-0  md:my-6 " href="#pricing" >
+                    بغيت نتعلم  
                 </a>
-                <a 
-                class="btn bg-white text-base-900 shadow-lg border-b-1 border-base-300 
-                w-full px-0 md:my-6 mr-0 md:mr-4 " 
-                href="#content" >
-                محتوى تدريب            
-            </a>
+                <a class="btn bg-white shadow-lg border-b-1 border-base-300 w-full px-0 md:my-6 mr-0 md:mr-4"
+                href="#content"
+                style="color: black">
+                    محتوى تدريب
+                </a>
             </div>
         </div>
         </div>
@@ -45,7 +44,7 @@ plugins:
     </section>
 
     <div class='flex flex-col-reverse md:flex-row-reverse md:ltr:flex-row relative max-w-8xl md:mx-auto md:justify-center'>
-    <section class="relative bg-white" id="content">
+    <section class="relative" id="content">
         <div class="relative max-w-6xl mx-auto px-4 md:px-0 md:mx-0">
             <div class="max-w-3xl mx-auto text-right ltr:text-left py-4 px-2 sm:px-4 md:py-6">
                 <div class="py-3 rounded-sm md:border md:shadow-sm md:px-4">
@@ -165,7 +164,7 @@ plugins:
         </div>
     </section>
     
-    <section class="relative max-w-3xl rtl:text-right ltr:text-left py-4 px-7 mx-auto md:px-8 md:py-10 md:mx-0 bg-white lg:ml-6">
+    <section class="relative max-w-3xl rtl:text-right ltr:text-left py-4 px-7 mx-auto md:px-8 md:py-10 md:mx-0  lg:ml-6">
         <h2 class="font-semibold text-lg md:text-xl text-base-900 ">
             يتضمن هذا تدريب :
         </h2>
@@ -210,7 +209,7 @@ plugins:
                     <p class="text-lg font-semibold leading-tight">متابعة شخصية</p>
                     <p class="mt-1 text-base font-normal">فريقنا دائماً معاك، نقدم المساعدة والدعم من خلال مجموعة واتساب لحل المشاكل وتقديم المشورة.</p>
                 </div>
-                <div class='flex-shrink-0 bg-white rounded-lg outline outline-1 outline-green-primary p-3 w-10 h-10 flex justify-center items-center'>
+                <div class='flex-shrink-0  rounded-lg outline outline-1 outline-green-primary p-3 w-10 h-10 flex justify-center items-center'>
                     <i class="fa fa-users text-green-primary text-center" aria-hidden="true"></i>
                 </div>
             </div>
@@ -219,7 +218,7 @@ plugins:
                     <p class="text-lg font-semibold leading-tight">شهادة معتمدة</p>
                     <p class="mt-1 text-base font-normal">مني كاتسالي تدريب كتاخد شهادة معتمدة من عندنا لي كاتفتح ليك فرص جداد فحياتك</p>
                 </div>
-                <div class='flex-shrink-0 bg-white rounded-lg outline outline-1 outline-green-primary p-3 w-10 h-10 flex justify-center items-center'>
+                <div class='flex-shrink-0  rounded-lg outline outline-1 outline-green-primary p-3 w-10 h-10 flex justify-center items-center'>
                     <i class="fa fa-user-graduate text-green-primary text-center" aria-hidden="true"></i>
                 </div>
             </div>
@@ -228,7 +227,7 @@ plugins:
                     <p class="text-lg font-semibold leading-tight">مشاريع برمجية</p>
                     <p class="mt-1 text-base font-normal">دوراتنا عملية بنسبة 100٪، حيث ستعمل على مشاريع برمجية تطبيقية تساهم في تطوير مهاراتك.</p>
                 </div>
-                <div class='flex-shrink-0 bg-white rounded-lg outline outline-1 outline-green-primary p-3 w-10 h-10 flex justify-center items-center'>
+                <div class='flex-shrink-0  rounded-lg outline outline-1 outline-green-primary p-3 w-10 h-10 flex justify-center items-center'>
                     <i class="fa fa-graduation-cap text-green-primary text-center" aria-hidden="true"></i>
                 </div>
             </div>
@@ -239,7 +238,7 @@ plugins:
 <section class="relative max-w-6xl mx-auto py-6 px-5 sm:px-12 mb-4 md:py-8">
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
         <div class="flex flex-col justify-center items-start px-4">
-            <p class="text-2xl md:text-3xl font-bold text-right text-neutral-600 mb-2">الاستثمار الذي سيغير حياتك للأبد !</p>
+            <p class="text-2xl md:text-3xl font-bold text-right  mb-2">الاستثمار الذي سيغير حياتك للأبد !</p>
             <ul class="text-right space-y-1">
                 <li class="flex items-start mb-1">
                     <span class="fa-solid fa-users-rectangle w-8 p-1"></span>
@@ -283,7 +282,7 @@ plugins:
             </div>    
             <div class="flex flex-row justify-between items-center w-full gap-2 md:gap-4">
                 <div class="flex flex-col justify-between items-start  h-70 md:h-80 w-full p-4 rounded-2xl bg-green-primary">
-                    <p class="text-sm font-medium text-right text-red-primary bg-white rounded-md w-fit px-2 py-1 mb-2">أداء مرة واحدة</p>
+                    <p class="text-sm font-medium text-right text-red-primary  rounded-md w-fit px-2 py-1 mb-2">أداء مرة واحدة</p>
                     <p class="line-through text-2xl font-bold text-right text-white">699 درهم</p>
                     <div class="flex flex-row justify-center items-baseline">
                         <p class=" text-5xl md:text-6xl font-bold text-right text-white">399</p>
@@ -292,16 +291,16 @@ plugins:
                         <p class="text-sm text-white text-right mb-2">هذا العرض يمكنك من الاستفادة من التدريب كاملاً (3 أشهر) بدفع مرة واحدة.</p>     
                         <a href="https://api.whatsapp.com/send?phone=212612527672&text=%D8%A8%D8%BA%D9%8A%D8%AA%20%D9%86%D8%B3%D8%AC%D9%84%20%D9%81%D9%8A%20%D8%A7%D9%84%D8%AA%D8%AF%D8%B1%D9%8A%D8%A8%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AA%D8%B7%D9%88%D9%8A%D8%B1%20%D8%A7%D9%84%D9%88%D8%A7%D8%AC%D9%87%D8%A9%20%D8%A7%D9%84%D8%A3%D9%85%D8%A7%D9%85%D9%8A%D8%A9%20%D8%A8%D8%A7%D9%84%D8%B9%D8%B1%D8%B6%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AB%D9%84%D8%A7%D8%AB%D8%A9%20%D8%B4%D9%87%D9%88%D8%B1%20%D8%A8%D9%80%20599%20%D8%AF%D8%B1%D9%87%D9%85."
                             onClick="fbq('track', 'Lead')" 
-                            class="w-full py-1 rounded-md bg-white text-base md:text-lg font-medium text-center text-red-primary">تسجيل</a>
+                            class="w-full py-1 rounded-md  text-base md:text-lg font-medium text-center text-red-primary">تسجيل</a>
                 </div> 
                 <div class="flex flex-col justify-between items-start  h-70 md:h-80 w-full p-4 rounded-2xl border shadow-sm">
                     <p class="text-sm font-medium text-right text-white bg-neutral-400 rounded-md w-fit px-2 py-1 mb-2">أداء كل شهر</p>
-                    <p class="line-through text-2xl font-bold text-right text-base-600">299 درهم</p>
+                    <p class="line-through text-2xl font-bold text-right">299 درهم</p>
                     <div class="flex flex-row justify-center items-baseline">
-                        <p class=" text-5xl md:text-6xl font-bold text-right text-base-600">199</p>
-                        <p class="text-lg md:text-xl font-semibold text-right text-base-600 ">درهم</p>                     
+                        <p class=" text-5xl md:text-6xl font-bold text-right">199</p>
+                        <p class="text-lg md:text-xl font-semibold text-right ">درهم</p>                     
                     </div>
-                    <p class="text-sm text-base-600 text-right mb-2">هذا العرض يمكنك من الاستفادة من التدريب بدفع شهري.</p>                
+                    <p class="text-sm text-right mb-2">هذا العرض يمكنك من الاستفادة من التدريب بدفع شهري.</p>                
                     <a href="https://api.whatsapp.com/send?phone=212612527672&text=%D8%A8%D8%BA%D9%8A%D8%AA%20%D9%86%D8%B3%D8%AC%D9%84%20%D9%81%D9%8A%20%D8%A7%D9%84%D8%AA%D8%AF%D8%B1%D9%8A%D8%A8%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AA%D8%B7%D9%88%D9%8A%D8%B1%20%D8%A7%D9%84%D9%88%D8%A7%D8%AC%D9%87%D8%A9%20%D8%A7%D9%84%D8%A3%D9%85%D8%A7%D9%85%D9%8A%D8%A9%20%D8%A8%D8%A7%D9%84%D8%B9%D8%B1%D8%B6%20%D8%AF%D9%8A%D8%A7%D9%84%20249%20%D8%AF%D8%B1%D9%87%D9%85%20%D9%81%D8%A7%D9%84%D8%B4%D9%87%D8%B1."
                     target="_blank"
                     onClick="fbq('track', 'Lead')" 
