--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- Created By TRY Agency -->
-<html lang="{{ locale }}" dir="{{ dir }}">
+<html lang="{{ locale }}" dir="{{ dir }}" x-data="{ darkMode: localStorage.getItem('theme') === 'dark' }" x-init="$watch('darkMode', val => { document.documentElement.classList.toggle('dark', val); localStorage.setItem('theme', val ? 'dark' : 'light') })" x-bind:class="{ 'dark': darkMode }">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -70,8 +70,8 @@
         <meta name="theme-color" content="#ffffff">
         </script>
     </head>
-    <body class="font-inter antialiased bg-white text-base-900 tracking-tight flex flex-col min-h-screen">
-        <nav class="fixed top-0 left-0 w-full bg-white z-50 pt-1" dir="ltr" x-data="{ navbar: false, scrolled: false }" @scroll.window="scrolled = window.scrollY > 10">
+    <body class=" text-base-900 dark:bg-gray-900 dark:text-white font-inter antialiased  text-base-900 dark:bg-gray-900 dark:text-white tracking-tight flex flex-col min-h-screen">
+        <nav class="bg-white dark:bg-gray-800 fixed top-0 left-0 w-full  z-50 pt-1" dir="ltr" x-data="{ navbar: false, scrolled: false }" @scroll.window="scrolled = window.scrollY > 10" >
         <div :class="scrolled ? 'shadow-sm' : ''" class="relative ps-16 pe-16">
             <div class="justify-between sm:items-center md:flex md:px-6">
             <div>
@@ -98,78 +98,91 @@
                 <div class="flex-1 pb-3 mt-8 md:block md:pb-0 md:mt-0" x-cloak x-bind:class="navbar ? 'block' : 'hidden'">
                 <ul class="text-center flex flex-col md:flex-row items-center justify-center space-y-5 md:space-x-6 md:space-y-0 text-lg font-medium">
                     <li class="mr-4">
-                    <a href="/" class="text-base-700 px-4 py-2 rounded-md transition duration-300 ease-in-out hover:bg-[#0fb579] hover:text-white">الرئيسية</a>
+                        <a href="/" class="text-base-700 px-4 py-2 rounded-md transition duration-300 ease-in-out hover:bg-[#0fb579] hover:text-white">الرئيسية</a>
                     </li>
 
-                    <li class="relative z-50" x-data="{open: false}" x-on:mouseover="$mobile || (open = true)"
+                    <li class="mr-4 relative z-50" x-data="{open: false}" x-on:mouseover="$mobile || (open = true)"
                         x-on:mouseout="$mobile || (open = false)" x-on:focus="$mobile || (open = true)"
                         x-on:blur="$mobile || (open = false)" x-on:click="$mobile && (open = !open)" @resize.window="open = false">
-                    <a class="hover:text-base-900 py-2 flex items-center justify-center transition duration-150 ease-in-out" href="#0"
-                        x-bind:aria-expanded="open" x-on:click.prevent>
-                        تدريبات
-                        <svg class="ml-2 w-3 h-3 fill-current cursor-pointer flex-shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M10.28 4.305L5.989 8.598 1.695 4.305A1 1 0 00.28 5.72l5 5a1 1 0 001.414 0l5-5a1 1 0 10-1.414-1.414z" />
-                        </svg>
-                    </a>
-                    <ul x-show="open" x-cloak class="text-center origin-top-right" x-bind:class="$mobile || 'absolute top-full right-0 z-10 w-64 ltr:text-left rtl:text-right origin-top-right'">
-                        <div class="relative px-2 pb-1 rounded md:border border-base-200 md:shadow-md bg-white w-fit text-right">
-                            <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
-                                <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
-                                <a href="/ar/backend" class="ml-auto">تطوير الواجهة الخلفية</a>
-                            </li>
-                            <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
-                                <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
-                                <a href="/ar/frontend" class="ml-auto">تطوير الواجهة الأمامية</a>
-                            </li>
-                            <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
-                                <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
-                                <a href="/ar/graphic-design" class="ml-auto">التصميم الجرافيكي</a>
-                            </li>
-                            <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
-                                <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
-                                <a href="/ar/office-it" class="ml-auto">المعلوميات المكتبية</a>
-                            </li>
-                        </div>
-                    </ul>
+                        <a class="hover:text-base-900 py-2 flex items-center justify-center transition duration-150 ease-in-out" href="#0"
+                            x-bind:aria-expanded="open" x-on:click.prevent>
+                            تدريبات
+                            <svg class="ml-2 w-3 h-3 fill-current cursor-pointer flex-shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M10.28 4.305L5.989 8.598 1.695 4.305A1 1 0 00.28 5.72l5 5a1 1 0 001.414 0l5-5a1 1 0 10-1.414-1.414z" />
+                            </svg>
+                        </a>
+                        <ul x-show="open" x-cloak class="text-center origin-top-right" x-bind:class="$mobile || 'absolute top-full right-0 z-10 w-64 ltr:text-left rtl:text-right origin-top-right'">
+                            <div class="bg-white relative px-2 pb-1 rounded md:border border-base-200 md:shadow-md w-fit text-right">
+                                <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] text-dark bg-white">
+                                    <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
+                                    <a href="/ar/backend" class="ml-auto" style="color:black">تطوير الواجهة الخلفية</a>
+                                </li>
+                                <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white text-dark bg-white">
+                                    <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
+                                    <a href="/ar/frontend" class="ml-auto" style="color:black">تطوير الواجهة الأمامية</a>
+                                </li>
+                                <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white text-dark bg-white">
+                                    <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
+                                    <a href="/ar/graphic-design" class="ml-auto" style="color:black">التصميم الجرافيكي</a>
+                                </li>
+                                <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white text-dark bg-white">
+                                    <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
+                                    <a href="/ar/office-it" class="ml-auto" style="color:black">المعلوميات المكتبية</a>
+                                </li>
+                            </div>
+                        </ul>
                     </li>
 
 
-                    <li class="relative z-50" x-data="{open: false}" x-on:mouseover="$mobile || (open = true)"
+                    <li class="mr-4 relative z-50" x-data="{open: false}" x-on:mouseover="$mobile || (open = true)"
                         x-on:mouseout="$mobile || (open = false)" x-on:focus="$mobile || (open = true)"
                         x-on:blur="$mobile || (open = false)" x-on:click="$mobile && (open = !open)" @resize.window="open = false">
-                    <a class="hover:text-base-900 py-2 flex items-center justify-center transition duration-150 ease-in-out" href="#0"
-                        x-bind:aria-expanded="open" x-on:click.prevent>
-                        تدريبات خاصة
-                        <svg class="ml-2 w-3 h-3 fill-current cursor-pointer flex-shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M10.28 4.305L5.989 8.598 1.695 4.305A1 1 0 00.28 5.72l5 5a1 1 0 001.414 0l5-5a1 1 0 10-1.414-1.414z" />
-                        </svg>
-                    </a>
-                    <ul x-show="open" x-cloak class="text-center origin-top-right" x-bind:class="$mobile || 'absolute top-full right-0 z-10 w-64 ltr:text-left rtl:text-right origin-top-right'">
-                        <div class="relative px-2 pb-1 rounded md:border border-base-200 md:shadow-md bg-white w-fit text-right">
-                            <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
-                                <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
-                                <a href="/ar/python" class="ml-auto">تدريب لغة بايثون</a>
-                            </li>
-                            <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
-                                <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
-                                <a href="/ar/java" class="ml-auto">تدريب لغة جافا</a>
-                            </li>
-                            <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
-                                <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
-                                <a href="/ar/javascript" class="ml-auto">تدريب جافاسكريبت</a>
-                            </li>
-                            <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
-                                <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
-                                <a href="/ar/c-and-cpp" class="ml-auto">تدريب لغة C و ++C</a>
-                            </li>
-                        </div>
-                    </ul>
+                        <a class="hover:text-base-900 py-2 flex items-center justify-center transition duration-150 ease-in-out" href="#0"
+                            x-bind:aria-expanded="open" x-on:click.prevent>
+                            تدريبات خاصة
+                            <svg class="ml-2 w-3 h-3 fill-current cursor-pointer flex-shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M10.28 4.305L5.989 8.598 1.695 4.305A1 1 0 00.28 5.72l5 5a1 1 0 001.414 0l5-5a1 1 0 10-1.414-1.414z" />
+                            </svg>
+                        </a>
+                        <ul x-show="open" x-cloak class="text-center origin-top-right" x-bind:class="$mobile || 'absolute top-full right-0 z-10 w-64 ltr:text-left rtl:text-right origin-top-right'">
+                            <div class="bg-white relative px-2 pb-1 rounded md:border border-base-200 md:shadow-md  w-fit text-right">
+                                <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
+                                    <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
+                                    <a href="/ar/python" class="ml-auto" style="color:black">تدريب لغة بايثون</a>
+                                </li>
+                                <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
+                                    <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
+                                    <a href="/ar/java" class="ml-auto" style="color:black">تدريب لغة جافا</a>
+                                </li>
+                                <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
+                                    <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
+                                    <a href="/ar/javascript" class="ml-auto" style="color:black">تدريب جافاسكريبت</a>
+                                </li>
+                                <li class="p-2 font-medium flex items-center gap-3 group hover:bg-[#0fb579] hover:text-white">
+                                    <span class="text-xs font-bold text-white rounded bg-green-700 px-2">مفتوح</span>
+                                    <a href="/ar/c-and-cpp" class="ml-auto" style="color:black">
+                                    <span dir="ltr">C++ و C</span> تدريب لغة 
+                                    </a>
+                                </li>
+                            </div>
+                        </ul>
                     </li>
 
 
-                    <li class="mr-4">
-                    <a href="/ar/aboutus" class="text-base-700 px-4 py-2 rounded-md transition duration-300 ease-in-out hover:bg-[#0fb579] hover:text-white">من نحن</a>
+                    <li  class="mr-4">
+                        <a href="/ar/aboutus" class="text-base-700 px-4 py-2 rounded-md transition duration-300 ease-in-out hover:bg-[#0fb579] hover:text-white">من نحن</a>
                     </li>
+
+                    <!-- Change Mode (Language + Theme) -->
+                    <li class="mr-4 flex gap-4 items-center">
+                
+                    <button @click="darkMode = !darkMode" class="p-2 rounded text-base-700 dark:text-white">
+                        <span x-show="!darkMode">🌞 Light</span>
+                        <span x-show="darkMode">🌙 Dark</span>
+                    </button>
+
+                    </li>
+
                 </ul>
                 </div>
             </div>
