--- a/src/_includes/pages/aboutus.njk
+++ b/src/_includes/pages/aboutus.njk
@@ -19,14 +19,14 @@ plugins:
                 <h2 class="text-2xl font-bold sm:text-3xl">
                 إبدأ رحلتك الآن في عالم البرمجة والتصميم، وطوّر مهاراتك، وافتح آفاقًا جديدة مع أكاديمية أجي نكوديو!
                 </h2>
-                <p class="mt-4 text-base-600 text-lg mb-4 md:mb-0">
+                <p class="mt-4 text-lg mb-4 md:mb-0">
                 إكتسب المهارات الرقمية التي تساعدك على تحقيق أهدافك الشخصية والمهنية من خلال برامج تدريبية مبتكرة تلبي احتياجات سوق العمل. انضم إلى أكاديمية آجي نكوديو لتتعلم من نخبة الخبراء في المجال، وابدأ رحلتك نحو مستقبل مهني واعد
                 </p>
                 <div class="mx-auto max-w-none" x-data>
                 <a 
                     class="btn text-white w-full md:max-w-fit md:my-6"
                     style="background-color:#0fb579" 
-                    href="/ar/basics"
+                    href="/ar/backend"
                 >
                     أريد أن أتعلم
                 </a>
@@ -49,7 +49,7 @@ plugins:
                 <p class=" mb-2 md:mb-3 text-2xl md:text-3xl font-bold text-base-900 text-right ltr:text-left">
                     مهمتنا
                 </p>
-                <p class=" md:mb-3 text-base md:text-lg font-normal text-base-600 text-right ltr:text-left">
+                <p class=" md:mb-3 text-base md:text-lg font-normal text-right ltr:text-left">
                     تتجاوز مهمتنا البيانات المجردة, إنها التزام. نحن ملتزمون بتزويدك بالقدرة على تطوير المهارات والمعرفة اللازمة للتنقل في سوق العمل المتغير باستمرار. نؤمن بإمكانية كل طالب لدينا ونلتزم بتوفير الأدوات والموارد والدعم اللازم لإطلاق هذه الإمكانيات.
                 </p>
             </div>
@@ -57,7 +57,7 @@ plugins:
                 <p class=" mb-2 md:mb-3 text-2xl md:text-3xl font-bold text-base-900 text-right ltr:text-left">
                     رؤيتنا
                 </p>
-                <p class=" md:mb-3 text-base md:text-lg font-normal text-base-600 text-right ltr:text-left">
+                <p class=" md:mb-3 text-base md:text-lg font-normal text-right ltr:text-left">
                     رؤيتنا هي أن نكون الرائدين في مجال التعليم عبر الإنترنت في المغرب وخارجه. نتطلع إلى خلق مجتمع دينامي وشامل من الأشخاص الذين يتوقون للتعلم طوال حياتهم، مُحرَّكين بفضولهم وشغفهم المشترك بالنمو والاكتشاف. نتخيل مستقبلًا حيث يتاح للجميع الفرصة للتعلم والنمو والنجاح.
                 </p>
             </div>
@@ -72,7 +72,7 @@ plugins:
                     <p class="text-lg font-semibold leading-tight">التميز</p>
                     <p class="mt-1 text-base font-normal">نسعى لتحقيق أعلى مستويات التفوق من خلال تقديم تجارب تعليمية مبتكرة، عالية الجودة، وذات طابع عملي.</p>
                 </div>
-                <div class='flex-shrink-0 bg-white rounded-lg outline outline-1 outline-green-primary p-3 w-10 h-10 flex justify-center items-center '>
+                <div class='flex-shrink-0  rounded-lg outline outline-1 outline-green-primary p-3 w-10 h-10 flex justify-center items-center '>
                     <i class="fas fa-bolt text-green-primary text-center" aria-hidden="true"></i>
                 </div>
             </div>
@@ -82,7 +82,7 @@ plugins:
                     <p class="text-lg font-semibold leading-tight">التآزر</p>
                     <p class="mt-1 text-base font-normal">نحن أكثر من مجرد أكاديمية, نحن مجتمع يدعم أعضاؤه بعضهم البعض في بيئة تعاونية ومشجعة، حيث يتم تقدير كل رأي والاحتفاء بكل إنجاز.</p>
                 </div>
-                <div class='flex-shrink-0 bg-white rounded-lg outline outline-1 outline-green-primary p-3 w-10 h-10 flex justify-center items-center '>
+                <div class='flex-shrink-0  rounded-lg outline outline-1 outline-green-primary p-3 w-10 h-10 flex justify-center items-center '>
                     <i class="fa fa-hand-holding-heart text-green-primary text-center" aria-hidden="true"></i>
                 </div>
             </div>
@@ -92,7 +92,7 @@ plugins:
                     <p class="text-lg font-semibold leading-tight">التطور</p>
                     <p class="mt-1 text-base font-normal">شغفنا التعلم والنمو الدائم. نؤمن بإمكانيات طلابنا ونعمل على مساعدتهم لتحقيق أقصى ما يمكنهم.</p>
                 </div>
-                <div class='flex-shrink-0 bg-white rounded-lg outline outline-1 outline-green-primary p-3 w-10 h-10 flex justify-center items-center '>
+                <div class='flex-shrink-0  rounded-lg outline outline-1 outline-green-primary p-3 w-10 h-10 flex justify-center items-center '>
                     <i class="fas fa-rocket text-green-primary text-center" aria-hidden="true"></i>
                 </div>
             </div>
@@ -102,7 +102,7 @@ plugins:
                     <p class="text-lg font-semibold leading-tight">الأمانة</p>
                     <p class="mt-1 text-base font-normal">نلتزم بفعل الصواب دائمًا، مع الحرص على الشفافية، النزاهة، والأصالة في كل ما نقوم به.</p>
                 </div>
-                <div class='flex-shrink-0 bg-white rounded-lg outline outline-1 outline-green-primary p-3 w-10 h-10 flex justify-center items-center '>
+                <div class='flex-shrink-0  rounded-lg outline outline-1 outline-green-primary p-3 w-10 h-10 flex justify-center items-center '>
                     <i class="fa fa-shield-alt text-green-primary text-center" aria-hidden="true"></i>
                 </div>
             </div>
@@ -131,7 +131,7 @@ plugins:
                     </p>
 
                     <div class="flex mt-4 -mx-2">
-                        <a href="#" class="mx-2 text-base-600 dark:text-base-300 hover:text-base-500 dark:hover:text-base-300 group-hover:text-white" aria-label="Reddit">
+                        <a href="#" class="mx-2 dark:text-base-300 hover:text-base-500 dark:hover:text-base-300 group-hover:text-white" aria-label="Reddit">
                             <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -140,7 +140,7 @@ plugins:
                             </svg>
                         </a>
 
-                        <a href="#" class="mx-2 text-base-600 dark:text-base-300 hover:text-base-500 dark:hover:text-base-300 group-hover:text-white" aria-label="Facebook">
+                        <a href="#" class="mx-2 dark:text-base-300 hover:text-base-500 dark:hover:text-base-300 group-hover:text-white" aria-label="Facebook">
                             <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -149,7 +149,7 @@ plugins:
                             </svg>
                         </a>
 
-                        <a href="#" class="mx-2 text-base-600 dark:text-base-300 hover:text-base-500 dark:hover:text-base-300 group-hover:text-white" aria-label="Github">
+                        <a href="#" class="mx-2 dark:text-base-300 hover:text-base-500 dark:hover:text-base-300 group-hover:text-white" aria-label="Github">
                             <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -176,7 +176,7 @@ plugins:
                     </p>
 
                     <div class="flex mt-4 -mx-2">
-                        <a href="#" class="mx-2 text-base-600 dark:text-base-300 hover:text-base-500 dark:hover:text-base-300 group-hover:text-white" aria-label="Reddit">
+                        <a href="#" class="mx-2 dark:text-base-300 hover:text-base-500 dark:hover:text-base-300 group-hover:text-white" aria-label="Reddit">
                             <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -185,7 +185,7 @@ plugins:
                             </svg>
                         </a>
 
-                        <a href="#" class="mx-2 text-base-600 dark:text-base-300 hover:text-base-500 dark:hover:text-base-300 group-hover:text-white" aria-label="Facebook">
+                        <a href="#" class="mx-2 dark:text-base-300 hover:text-base-500 dark:hover:text-base-300 group-hover:text-white" aria-label="Facebook">
                             <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -194,7 +194,7 @@ plugins:
                             </svg>
                         </a>
 
-                        <a href="#" class="mx-2 text-base-600 dark:text-base-300 hover:text-base-500 dark:hover:text-base-300 group-hover:text-white" aria-label="Github">
+                        <a href="#" class="mx-2 dark:text-base-300 hover:text-base-500 dark:hover:text-base-300 group-hover:text-white" aria-label="Github">
                             <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -218,7 +218,7 @@ plugins:
             <h2 class="text-2xl font-bold md:text-3xl md:block hidden mb-4">
                 إفتح فرص جديدة في سوق الشغل
             </h2>
-            <p class=" text-base-600 text-lg mb-4 md:mb-0 ps-4 pe-4">
+            <p class=" text-lg mb-4 md:mb-0 ps-4 pe-4">
                 شهادتنا ليست فقط تأكيداً على مهاراتك وقدراتك، بل هي بوابتك لفتح فرص عمل جديدة وتحقيق تقدير أكبر في سوق العمل
             </p>
             <div class="mx-auto max-w-none" x-data>
@@ -248,7 +248,7 @@ plugins:
             <div class="flex justify-center flex-col items-center col-span-1 ">
                 <p class="text-2xl font-bold sm:text-3xl mb-3 md:mb-4">
                     هل أنتم مستعدون للانطلاق في رحلة التعلم والنمو؟
-                <p class="text-lg font-normal sm:text-xl text-base-600 max-w-2xl">
+                <p class="text-lg font-normal sm:text-xl max-w-2xl">
                     تابعنا على وسائل التواصل الاجتماعي لتحصل على نصائح مجانية ومعلومات قيمة تُساعدك في تطوير مهاراتك وفتح فرص عمل جديدة.
             </div>
 
