--- a/src/_includes/pages/home.njk
+++ b/src/_includes/pages/home.njk
@@ -13,7 +13,7 @@
             <div class="flex flex-col justify-center items-center flex-shrink-0 p-2 md:p-0 md:w-2/3" dir="{{ dir }}" >
                 <div class="text-center rtl:lg:text-right ltr:lg:text-left self-start md:text-right">
                     <h2 class="text-2xl font-bold sm:text-3xl">إبدأ رحلتك الآن في عالم البرمجة والتصميم، وطوّر مهاراتك، وافتح آفاقًا جديدة مع أكاديمية أجي نكوديو!</h2>
-                    <p class="mt-4 text-base-600 text-lg mb-4 md:mb-0">إكتسب المهارات الرقمية التي تساعدك على تحقيق أهدافك الشخصية والمهنية من خلال برامج تدريبية مبتكرة تلبي احتياجات سوق العمل. انضم إلى أكاديمية آجي نكوديو لتتعلم من نخبة الخبراء في المجال، وابدأ رحلتك نحو مستقبل مهني واعد</p>
+                    <p class="mt-4 text-lg mb-4 md:mb-0">إكتسب المهارات الرقمية التي تساعدك على تحقيق أهدافك الشخصية والمهنية من خلال برامج تدريبية مبتكرة تلبي احتياجات سوق العمل. انضم إلى أكاديمية آجي نكوديو لتتعلم من نخبة الخبراء في المجال، وابدأ رحلتك نحو مستقبل مهني واعد</p>
                     <div class="mx-auto max-w-none" x-data>
                         <a class="btn text-white w-full md:max-w-fit md:my-6" style="background-color:#0fb579" href="/ar/backend">أريد أن أتعلم</a>
                     </div>
@@ -29,15 +29,15 @@
         <div class="flex flex-col ltr:md:flex-row-reverse rtl:md:flex-row gap-6 md:gap-10">
             <div class="">
                 <p class="mb-2 md:mb-3 text-2xl md:text-3xl font-bold text-base-900 text-center ltr:text-left">من نحن</p>
-                <p class="md:mb-3 text-base md:text-lg font-normal text-base-600 text-right ltr:text-left">أكاديمية إلكترونية متخصصة في تقديم تدريبات عن بُعد في مجالات البرمجة والتصميم. نهدف إلى تأهيل الشباب بأحدث التقنيات والمهارات المطلوبة لوظائف المستقبل، مما يعزز جاهزيتهم لسوق العمل ويحسن فرصهم المهنية. نضمن جودة التعليم من خلال المتابعة المستمرة أثناء التدريب، كما تتميز دوراتنا بمواكبتها لمتطلبات سوق الشغل واحتوائها على مشاريع تطبيقية عملية.</p>
+                <p class="md:mb-3 text-base md:text-lg font-normal text-right ltr:text-left">أكاديمية إلكترونية متخصصة في تقديم تدريبات عن بُعد في مجالات البرمجة والتصميم. نهدف إلى تأهيل الشباب بأحدث التقنيات والمهارات المطلوبة لوظائف المستقبل، مما يعزز جاهزيتهم لسوق العمل ويحسن فرصهم المهنية. نضمن جودة التعليم من خلال المتابعة المستمرة أثناء التدريب، كما تتميز دوراتنا بمواكبتها لمتطلبات سوق الشغل واحتوائها على مشاريع تطبيقية عملية.</p>
             </div>
             <div class="">
                 <p class="mb-2 md:mb-3 text-2xl md:text-3xl font-bold text-base-900 text-center ltr:text-left">مهمتنا</p>
-                <p class="md:mb-3 text-base md:text-lg font-normal text-base-600 text-right ltr:text-left">تتجاوز مهمتنا البيانات المجردة؛ إنها التزام. نحن ملتزمون بتزويدك بالقدرة على تطوير المهارات والمعرفة اللازمة للتنقل في سوق العمل المتغير باستمرار. نؤمن بإمكانية كل طالب لدينا ونلتزم بتوفير الأدوات والموارد والدعم اللازم لإطلاق هذه الإمكاني</p>
+                <p class="md:mb-3 text-base md:text-lg font-normal text-right ltr:text-left">تتجاوز مهمتنا البيانات المجردة؛ إنها التزام. نحن ملتزمون بتزويدك بالقدرة على تطوير المهارات والمعرفة اللازمة للتنقل في سوق العمل المتغير باستمرار. نؤمن بإمكانية كل طالب لدينا ونلتزم بتوفير الأدوات والموارد والدعم اللازم لإطلاق هذه الإمكاني</p>
             </div>
             <div class="">
                 <p class="mb-2 md:mb-3 text-2xl md:text-3xl font-bold text-base-900 text-center ltr:text-left">رؤيتنا</p>
-                <p class="md:mb-3 text-base md:text-lg font-normal text-base-600 text-right ltr:text-left">رؤيتنا هي أن نكون الرائدين في مجال التعليم عبر الإنترنت في المغرب وخارجه. نتطلع إلى خلق مجتمع دينامي وشامل من الأشخاص الذين يتوقون للتعلم طوال حياتهم، مُحرَّكين بفضولهم وشغفهم المشترك بالنمو والاكتشاف. نتخيل مستقبلًا حيث يتاح للجميع الفرصة للتعلم والنمو والنجاح.</p>
+                <p class="md:mb-3 text-base md:text-lg font-normal text-right ltr:text-left">رؤيتنا هي أن نكون الرائدين في مجال التعليم عبر الإنترنت في المغرب وخارجه. نتطلع إلى خلق مجتمع دينامي وشامل من الأشخاص الذين يتوقون للتعلم طوال حياتهم، مُحرَّكين بفضولهم وشغفهم المشترك بالنمو والاكتشاف. نتخيل مستقبلًا حيث يتاح للجميع الفرصة للتعلم والنمو والنجاح.</p>
             </div>
         </div>
     </section>
@@ -50,7 +50,7 @@
                     <p class="text-lg font-semibold leading-tight">متابعة شخصية</p>
                     <p class="mt-1 text-base font-normal">فريقنا دائماً معاك، نقدم المساعدة والدعم من خلال مجموعة واتساب لحل المشاكل وتقديم المشورة.</p>
                 </div>
-                <div class='flex-shrink-0 bg-white rounded-lg outline outline-1 outline-green-primary p-3 w-10 h-10 flex justify-center items-center'>
+                <div class='flex-shrink-0  rounded-lg outline outline-1 outline-green-primary p-3 w-10 h-10 flex justify-center items-center'>
                     <i class="fa fa-users text-green-primary text-center" aria-hidden="true"></i>
                 </div>
             </div>
@@ -59,7 +59,7 @@
                     <p class="text-lg font-semibold leading-tight">شهادة معتمدة</p>
                     <p class="mt-1 text-base font-normal">مني كاتسالي تدريب كتاخد شهادة معتمدة من عندنا لي كاتفتح ليك فرص جداد فحياتك</p>
                 </div>
-                <div class='flex-shrink-0 bg-white rounded-lg outline outline-1 outline-green-primary p-3 w-10 h-10 flex justify-center items-center'>
+                <div class='flex-shrink-0  rounded-lg outline outline-1 outline-green-primary p-3 w-10 h-10 flex justify-center items-center'>
                     <i class="fa fa-user-graduate text-green-primary text-center" aria-hidden="true"></i>
                 </div>
             </div>
@@ -68,7 +68,7 @@
                     <p class="text-lg font-semibold leading-tight">مشاريع برمجية</p>
                     <p class="mt-1 text-base font-normal">دوراتنا عملية بنسبة 100٪، حيث ستعمل على مشاريع برمجية تطبيقية تساهم في تطوير مهاراتك.</p>
                 </div>
-                <div class='flex-shrink-0 bg-white rounded-lg outline outline-1 outline-green-primary p-3 w-10 h-10 flex justify-center items-center'>
+                <div class='flex-shrink-0  rounded-lg outline outline-1 outline-green-primary p-3 w-10 h-10 flex justify-center items-center'>
                     <i class="fa fa-graduation-cap text-green-primary text-center" aria-hidden="true"></i>
                 </div>
             </div>
@@ -95,8 +95,8 @@
                     <li class="px-3 py-1 text-sm font-semibold text-white bg-green-500 rounded-full">Optimization</li>
                     <li class="px-3 py-1 text-sm font-semibold text-white bg-green-500 rounded-full">WordPress</li>
                 </ul>
-                <p class="text-2xl font-bold text-gray-800 mb-3">تدريب تطوير الواجهة الأمامية</p>
-                <p class="text-gray-600 mb-4">كمطوّر Front-End ستبدأ رحلتك بأساسيات تطوير الويب، ثم تتعمّق في الأدوات والتقنيات الحديثة المطلوبة ، وكل ذلك من خلال التطبيق العملي والمشاريع الحقيقية.</p>
+                <p class="text-2xl font-bold mb-3">تدريب تطوير الواجهة الأمامية</p>
+                <p class=" mb-4">كمطوّر Front-End ستبدأ رحلتك بأساسيات تطوير الويب، ثم تتعمّق في الأدوات والتقنيات الحديثة المطلوبة ، وكل ذلك من خلال التطبيق العملي والمشاريع الحقيقية.</p>
                 <p class="inline-block pb-1 text-green-600 font-medium border-b-2 border-green-600">إبدأ الآن →</p>
             </div>
         </a>
@@ -114,8 +114,8 @@
                     <li class="px-3 py-1 text-sm font-semibold text-white bg-blue-500 rounded-full">Spring Cloud</li>
                     <li class="px-3 py-1 text-sm font-semibold text-white bg-blue-500 rounded-full">Microservices</li>
                 </ul>
-                <p class="text-2xl font-bold text-gray-800 mb-3">تدريب تطوير الواجهة الخلفية</p>
-                <p class="text-gray-600 mb-4">اختصر الوقت وتعلّم جميع أساسيات تطوير الواجهة الخلفية من خلال مشاريع تطبيقية ودروس عملية، في ثلاثة أشهر فقط!</p>
+                <p class="text-2xl font-bold mb-3">تدريب تطوير الواجهة الخلفية</p>
+                <p class=" mb-4">اختصر الوقت وتعلّم جميع أساسيات تطوير الواجهة الخلفية من خلال مشاريع تطبيقية ودروس عملية، في ثلاثة أشهر فقط!</p>
                 <p class="inline-block pb-1 text-blue-600 font-medium border-b-2 border-blue-600">إبدأ الآن →</p>
             </div>
         </a>
@@ -131,8 +131,8 @@
                     <li class="px-3 py-1 text-sm font-semibold text-white bg-purple-500 rounded-full">OOP in C++</li>
                     <li class="px-3 py-1 text-sm font-semibold text-white bg-purple-500 rounded-full">File Handling</li>
                 </ul>
-                <p class="text-2xl font-bold text-gray-800 mb-3">تدريب البرمجة بلغة C و C++</p>
-                <p class="text-gray-600 mb-4">انطلق في رحلة البرمجة بلُغتي C و C++: تعلم واكتشف قوة الأساسيات المتقدمة. لغة C و C++ تُعدّان من أقوى وأهم اللغات في عالم البرمجة...</p>
+                <p class="text-2xl font-bold mb-3">تدريب البرمجة بلغة C و C++</p>
+                <p class=" mb-4">انطلق في رحلة البرمجة بلُغتي C و C++: تعلم واكتشف قوة الأساسيات المتقدمة. لغة C و C++ تُعدّان من أقوى وأهم اللغات في عالم البرمجة...</p>
                 <p class="inline-block pb-1 text-purple-600 font-medium border-b-2 border-purple-600">إبدأ الآن →</p>
             </div>
         </a>
@@ -148,8 +148,8 @@
                     <li class="px-3 py-1 text-sm font-semibold text-white bg-yellow-500 rounded-full">Exception Handling</li>
                     <li class="px-3 py-1 text-sm font-semibold text-white bg-yellow-500 rounded-full">Collections Framework</li>
                 </ul>
-                <p class="text-2xl font-bold text-gray-800 mb-3">تدريب البرمجة بلغة Java</p>
-                <p class="text-gray-600 mb-4">إبدأ رحلة تعلم لغة البرمجة جافا: انطلق نحو التميز وبرمج المستقبل. تعلم لغة Java من الأساسيات إلى الاحتراف...</p>
+                <p class="text-2xl font-bold mb-3">تدريب البرمجة بلغة Java</p>
+                <p class=" mb-4">إبدأ رحلة تعلم لغة البرمجة جافا: انطلق نحو التميز وبرمج المستقبل. تعلم لغة Java من الأساسيات إلى الاحتراف...</p>
                 <p class="inline-block pb-1 text-yellow-600 font-medium border-b-2 border-yellow-600">إبدأ الآن →</p>
             </div>
         </a>
@@ -166,8 +166,8 @@
                     <li class="px-3 py-1 text-sm font-semibold text-white bg-teal-500 rounded-full">Node.js</li>
                     <li class="px-3 py-1 text-sm font-semibold text-white bg-teal-500 rounded-full">Express.js</li>
                 </ul>
-                <p class="text-2xl font-bold text-gray-800 mb-3">تدريب البرمجة بلغة JavaScript</p>
-                <p class="text-gray-600 mb-4">اكتشف قوة JavaScript وابدأ بتطوير التطبيقات الحديثة من خلال تعلم الأساسيات، DOM، ومكتبات JavaScript المتقدمة!</p>
+                <p class="text-2xl font-bold mb-3">تدريب البرمجة بلغة JavaScript</p>
+                <p class=" mb-4">اكتشف قوة JavaScript وابدأ بتطوير التطبيقات الحديثة من خلال تعلم الأساسيات، DOM، ومكتبات JavaScript المتقدمة!</p>
                 <p class="inline-block pb-1 text-teal-600 font-medium border-b-2 border-teal-600">إبدأ الآن →</p>
             </div>
         </a>
@@ -186,8 +186,8 @@
                     <li class="px-3 py-1 text-sm font-semibold text-white bg-pink-500 rounded-full">Illustrator</li>
                     <li class="px-3 py-1 text-sm font-semibold text-white bg-pink-500 rounded-full">Photoshop</li>
                 </ul>
-                <p class="text-2xl font-bold text-gray-800 mb-3">تدريب التصميم الجرافيكي</p>
-                <p class="text-gray-600 mb-4">هذه الدورة تمنحك الأساس القوي والمهارات العملية التي تحتاجها لتحقيق أهدافك في عالم التصميم الرقمي.</p>
+                <p class="text-2xl font-bold mb-3">تدريب التصميم الجرافيكي</p>
+                <p class=" mb-4">هذه الدورة تمنحك الأساس القوي والمهارات العملية التي تحتاجها لتحقيق أهدافك في عالم التصميم الرقمي.</p>
                 <p class="inline-block pb-1 text-pink-600 font-medium border-b-2 border-pink-600">إبدأ الآن →</p>
             </div>
         </a>
@@ -206,8 +206,8 @@
                     <li class="px-3 py-1 text-sm font-semibold text-white bg-orange-500 rounded-full">Data Entry</li>
                     <li class="px-3 py-1 text-sm font-semibold text-white bg-orange-500 rounded-full">Advanced Excel</li>
                 </ul>
-                <p class="text-2xl font-bold text-gray-800 mb-3">تدريب المعلوميات المكتبية</p>
-                <p class="text-gray-600 mb-4">هذه الدورة ستمنحك المهارات التي تحتاجها لاستخدام برامج مثل Word ، Excel، PowerPoint ، مما سيسهم في تحسين أدائك الشخصي والمهني.</p>
+                <p class="text-2xl font-bold mb-3">تدريب المعلوميات المكتبية</p>
+                <p class=" mb-4">هذه الدورة ستمنحك المهارات التي تحتاجها لاستخدام برامج مثل Word ، Excel، PowerPoint ، مما سيسهم في تحسين أدائك الشخصي والمهني.</p>
                 <p class="inline-block pb-1 text-orange-600 font-medium border-b-2 border-orange-600">إبدأ الآن →</p>
             </div>
         </a>
@@ -226,8 +226,8 @@
                     <li class="px-3 py-1 text-sm font-semibold text-white bg-green-500 rounded-full">Web Development</li>
                     <li class="px-3 py-1 text-sm font-semibold text-white bg-green-500 rounded-full">Data Structures</li>
                 </ul>
-                <p class="text-2xl font-bold text-gray-800 mb-3">تدريب بايثون</p>
-                <p class="text-gray-600 mb-4">اكتشف قوة Python وابدأ رحلتك في تطوير الويب، تحليل البيانات، والذكاء الاصطناعي عبر تدريب عملي ومتقدم! 🐍</p>
+                <p class="text-2xl font-bold mb-3">تدريب بايثون</p>
+                <p class=" mb-4">اكتشف قوة Python وابدأ رحلتك في تطوير الويب، تحليل البيانات، والذكاء الاصطناعي عبر تدريب عملي ومتقدم! 🐍</p>
                 <p class="inline-block pb-1 text-green-600 font-medium border-b-2 border-green-600">إبدأ الآن →</p>
             </div>
         </a>
@@ -243,7 +243,7 @@
             <div class=" flex flex-col justify-center items-center flex-shrink-0 md:p-0 mb-5 md:mt-4">
                 <div class="text-center rtl:lg:text-right ltr:lg:text-left self-start md:text-right">
                     <h2 class="text-2xl font-bold md:text-3xl md:block hidden mb-4">إفتح فرص جديدة في سوق الشغل</h2>
-                    <p class=" text-base-600 text-lg mb-4 md:mb-0">شهادتنا ليست فقط تأكيداً على مهاراتك وقدراتك، بل هي بوابتك لفتح فرص عمل جديدة وتحقيق تقدير أكبر في سوق العمل</p>
+                    <p class=" text-lg mb-4 md:mb-0">شهادتنا ليست فقط تأكيداً على مهاراتك وقدراتك، بل هي بوابتك لفتح فرص عمل جديدة وتحقيق تقدير أكبر في سوق العمل</p>
                     <div class="mx-auto max-w-none" x-data>
                         <a 
                         href="https://api.whatsapp.com/send?phone=212612527672&text=Je%20suis%20intéressé%20par%20l'inscription%20à%20votre%20programme%20de%20formation%2C%20pourriez-vous%20m'en%20dire%20plus%20%3F"
@@ -270,11 +270,11 @@
         <!-- Zoom Controls -->
         <div style="display: flex; gap: 3px; margin-top: 5px; height: 30px; align-items: center; justify-content: center;">
             <button onclick="zoomIn()" 
-                    style="padding: 3px 6px; font-size: 12px; width: 24px; height: 24px; border: none; background-color: #0fb579; color: white; cursor: pointer; border-radius: 4px;">
+                    style="padding: 3px 6px; font-size: 12px; width: 24px; height: 24px; border: none; background-color: gray; color: white; cursor: pointer; border-radius: 4px;">
                 +
             </button>
             <button onclick="zoomOut()" 
-                    style="padding: 3px 6px; font-size: 12px; width: 24px; height: 24px; border: none; background-color: #0fb579; color: white; cursor: pointer; border-radius: 4px;">
+                    style="padding: 3px 6px; font-size: 12px; width: 24px; height: 24px; border: none; background-color: gray; color: white; cursor: pointer; border-radius: 4px;">
                 -
             </button>
         </div>
@@ -333,7 +333,7 @@
                 <p class="text-2xl font-bold sm:text-3xl mb-3 md:mb-4">
                     هل أنتم مستعدون للانطلاق في رحلة التعلم والنمو؟
                 </p>
-                <p class="text-lg font-normal sm:text-xl text-base-600 max-w-2xl">
+                <p class="text-lg font-normal sm:text-xl max-w-2xl">
                     تابعنا على وسائل التواصل الاجتماعي لتحصل على نصائح مجانية ومعلومات قيمة تُساعدك في تطوير مهاراتك وفتح فرص عمل جديدة.
                 </p>
             </div>
