--- a/src/_includes/pages/aboutus.njk
+++ b/src/_includes/pages/aboutus.njk
@@ -26,7 +26,7 @@ plugins:
                 <a 
                     class="btn text-white w-full md:max-w-fit md:my-6"
                     style="background-color:#0fb579" 
-                    href="/ar/backend"
+                    href="/ar/#trainings"
                 >
                     أريد أن أتعلم
                 </a>
@@ -268,7 +268,7 @@ plugins:
                 </li>
             
                 <li>
-                    <a href="https://www.linkedin.com/company/ajincodew2024" rel="noreferrer" target="_blank" class="text-base-700 transition hover:text-base-700/75">
+                    <a href="https://www.linkedin.com/company/ajincodewacademy" rel="noreferrer" target="_blank" class="text-base-700 transition hover:text-base-700/75">
                         <span class="sr-only">LinkedIn</span>
                         <i class="fab fa-linkedin text-2xl text-center hover:text-[#0fb579]" aria-hidden="true"></i>
                     </a>
