--- a/src/_includes/pages/home.njk
+++ b/src/_includes/pages/home.njk
@@ -15,7 +15,7 @@
                     <h2 class="text-2xl font-bold sm:text-3xl">إبدأ رحلتك الآن في عالم البرمجة والتصميم، وطوّر مهاراتك، وافتح آفاقًا جديدة مع أكاديمية أجي نكوديو!</h2>
                     <p class="mt-4 text-lg mb-4 md:mb-0">إكتسب المهارات الرقمية التي تساعدك على تحقيق أهدافك الشخصية والمهنية من خلال برامج تدريبية مبتكرة تلبي احتياجات سوق العمل. انضم إلى أكاديمية آجي نكوديو لتتعلم من نخبة الخبراء في المجال، وابدأ رحلتك نحو مستقبل مهني واعد</p>
                     <div class="mx-auto max-w-none" x-data>
-                        <a class="btn text-white w-full md:max-w-fit md:my-6" style="background-color:#0fb579" href="/ar/backend">أريد أن أتعلم</a>
+                        <a class="btn text-white w-full md:max-w-fit md:my-6" style="background-color:#0fb579" href="#trainings">أريد أن أتعلم</a>
                     </div>
                 </div>
             </div>
