--- a/src/_includes/pages/backend.njk
+++ b/src/_includes/pages/backend.njk
@@ -355,7 +355,7 @@ plugins:
 
                 <div class="mt-2 relative flex flex-col justify-between items-start h-70 md:h-100 w-full p-4 rounded-2xl border shadow-sm bg-[#030d2d]  text-white">
                     <span class="absolute -top-3 left-3 bg-white text-[#030d2d] text-xs font-semibold px-2 py-0.5 rounded">
-                        🟢 الأفضل قيمة
+                        🟢 القيمة الأفضل
                     </span>
                     <p class="text-sm font-medium text-right text-[#030d2d] rounded-md w-fit px-2 py-1 mb-2 bg-white">دفع 3 أشهر دفعة واحدة</p>
                     <p class="line-through text-2xl font-bold text-right text-white">799 درهم</p>
