--- a/src/_includes/pages/backend.njk
+++ b/src/_includes/pages/backend.njk
@@ -47,7 +47,7 @@ plugins:
     <section class="relative " id="content">
         <div class="relative max-w-6xl mx-auto px-4 md:px-0 md:mx-0">
             <div class="max-w-3xl mx-auto text-right ltr:text-left py-4 px-2 sm:px-4 md:py-6">
-                <div class="py-3 rounded-sm md:border md:shadow-sm md:px-4">
+                 <div class="rounded-2xl border p-4 ms-2 me-2">
                     <h2 class="font-bold leading-tight text-2xl">
                         شنو غادي تعلم :
                     </h2>
@@ -238,7 +238,7 @@ plugins:
     <section id="trainings" class='relative max-w-7xl mx-auto sm:px-6 mb-6 pt-6'>
         <p class='text-center text-2xl md:text-3xl font-bold mb-2'>أكثر من مجرد تدريب</p>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
-            <div class="flex flex-col justify-between h-full p-4 rounded-2xl border shadow-sm">
+            <div class="flex flex-row-reverse items-start text-right ltr:text-left ml-auto rounded-2xl border p-4 ms-2 me-2">
                 <div class="mx-4">
                     <p class="text-lg font-semibold leading-tight">متابعة شخصية</p>
                     <p class="mt-1 text-base font-normal">فريقنا دائماً معاك، نقدم المساعدة والدعم من خلال مجموعة واتساب لحل المشاكل وتقديم المشورة.</p>
@@ -247,7 +247,7 @@ plugins:
                     <i class="fa fa-users text-green-primary text-center" aria-hidden="true"></i>
                 </div>
             </div>
-            <div class="flex flex-col justify-between h-full p-4 rounded-2xl border shadow-sm">
+            <div class="flex flex-row-reverse items-start text-right ltr:text-left ml-auto rounded-2xl border p-4 ms-2 me-2">
                 <div class="mx-4">
                     <p class="text-lg font-semibold leading-tight">شهادة معتمدة</p>
                     <p class="mt-1 text-base font-normal">مني كاتسالي تدريب كتاخد شهادة معتمدة من عندنا لي كاتفتح ليك فرص جداد فحياتك</p>
@@ -256,7 +256,7 @@ plugins:
                     <i class="fa fa-user-graduate text-green-primary text-center" aria-hidden="true"></i>
                 </div>
             </div>
-            <div class="flex flex-col justify-between h-full p-4 rounded-2xl border shadow-sm">
+            <div class="flex flex-row-reverse items-start text-right ltr:text-left ml-auto rounded-2xl border p-4 ms-2 me-2">
                 <div class="mx-4">
                     <p class="text-lg font-semibold leading-tight">مشاريع برمجية</p>
                     <p class="mt-1 text-base font-normal">دوراتنا عملية بنسبة 100٪، حيث ستعمل على مشاريع برمجية تطبيقية تساهم في تطوير مهاراتك.</p>
