--- a/src/_includes/pages/aboutus.njk
+++ b/src/_includes/pages/aboutus.njk
@@ -114,7 +114,7 @@ plugins:
             <p class='text-center text-3xl md:text-3xl font-bold mb-4 md:mb-6'>فريق العمل</p>
             <p class="max-w-2xl mx-auto my-6 text-center text-base-500 dark:text-base-300">أعضاء هذا الفريق هم المبدعون والمؤسسون لأكاديمية اجي نكوديو الإلكترونية المتميزة</p>
             <div class="grid grid-cols-1 gap-8 mt-8 xl:mt-16 md:grid-cols-2 xl:grid-cols-2">
-                <div class="px-12 py-8 transition-colors duration-300 transform border cursor-pointer rounded-xl hover:border-transparent group hover:bg-[#0fb579] dark:border-base-700 dark:hover:border-transparent">
+                <div class="transition-transform transform hover:scale-105 px-12 py-8 transition-colors duration-300 transform border cursor-pointer rounded-xl hover:border-transparent group hover:bg-[#0fb579] dark:border-base-700 dark:hover:border-transparent">
                     <div class="flex flex-col sm:-mx-4 sm:flex-row">
                         {% image "src/assets/images/K.svg", "woman smiling", ["svg","svg"], [600,1200], "(min-width: 780px) 720px, 518px", {class:"flex-shrink-0 object-cover w-24 h-24"} %}
                         <div class="mt-4 sm:mx-4 sm:mt-0">
@@ -160,7 +160,7 @@ plugins:
                     </div>
                 </div>
 
-                <div class="px-12 py-8 transition-colors duration-300 transform border cursor-pointer rounded-xl hover:border-transparent group hover:bg-[#0fb579] dark:border-base-700 dark:hover:border-transparent">
+                <div class="transition-transform transform hover:scale-105 px-12 py-8 transition-colors duration-300 transform border cursor-pointer rounded-xl hover:border-transparent group hover:bg-[#0fb579] dark:border-base-700 dark:hover:border-transparent">
                     <div class="flex flex-col sm:-mx-4 sm:flex-row">
                         {% image "src/assets/images/A.svg", "woman smiling", ["svg","svg"], [600,1200], "(min-width: 780px) 720px, 518px", {class:"flex-shrink-0 object-cover w-24 h-24"} %}
             
